# tinyioc

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml  python.yml
docs/source/: conf.py  index.rst  reference.rst  usage.rst
tests/: test_async.py  test_class_injection.py  test_function_injection.py  test_inject_getter.py  test_injectable_args.py  test_ioc.py  test_modules.py
tinyioc/: __init__.py  container.py  decorators.py  helpers.py  ioc_exception.py  service_entry.py  types.py
tinyioc/module/: decorators.py  module.py  provide.py
